[project]
name = "openapi-cli"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yin-Chi Chan", email = "ycc39@cam.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "requests>=2.32.3",
]

[project.scripts]
openapi = "openapi_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=3.3.4",
]
